<resources>
    <string name="app_name">DineSathi</string>
    <string name="appName">DineSathi</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_user_register_now"><u>New User? Register Now!</u></string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>

    <string name="dinesathiPreferences">DineSathi Preferences</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>


</resources>