<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter your registered mobile number and email below"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="10"
        android:hint="@string/mobile_number_10_digits"
        android:textColorHint="#B2FFFFFF"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_mobile"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/email_address"
        android:textColorHint="#B2FFFFFF"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_bold"
        android:background="@color/colorPrimary"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/signup"
        android:layout_margin="40dp" />

</LinearLayout>